Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P0: Blocker
-
Resolution: Done
-
Affects Version/s: 5.6.0 Alpha
-
Fix Version/s: 5.6.0 RC
-
Component/s: Quick: Graphical Effects
-
Labels:None
-
Environment:Latest 5.6 branch
-
Commits:2f0e5e726d76b8ad5a0e9b07aeb57006490e18b4
Description
The following code used to display a rectangle with a shadow, but after https://codereview.qt-project.org/#/c/138342/ nothing shows up.
import QtQuick 2.5 import QtQuick.Window 2.2 import QtGraphicalEffects 1.0 Window { width: 200 height: 200 visible: true Rectangle { width: 50 height: 50 radius: 5 color: "tomato" anchors.centerIn: parent layer.enabled: true layer.effect: DropShadow { verticalOffset: 3 horizontalOffset: 3 color: "gray" spread: 0.5 samples: 15 } } }
Attachments
Issue Links
- resulted in
-
QTBUG-50880 With "-style material" Button shows as flat text with no border
-
- Closed
-
-
QTBUG-50881 With "-style material" ComboBox is broken
-
- Closed
-