Make Item::layer::effect: Effect {} work again

Task-number: QTBUG-49979
Change-Id: I7745b313194570b7ca0d086d41894a6d71f7610a
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>